rebase code and update logic for runtime recomm
Signed-off-by: Saad Khan <saakhan@ibm.com>